Update 'nodejs-nixnjofy' component image to: quay.io/rhtap_qe/nodejs-nixnjofy:ef66e2e632536275e2a3c923f79a8baa0e39fe60@sha256:4732fc6ab888b35afb5e0b64d0aa952b3cf8ab7609fe7d7ade2d14c48b43cf45

--- a/components/nodejs-nixnjofy/overlays/development/deployment-patch.yaml
+++ b/components/nodejs-nixnjofy/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: nodejs-nixnjofy
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/nodejs-nixnjofy:ef66e2e632536275e2a3c923f79a8baa0e39fe60@sha256:4732fc6ab888b35afb5e0b64d0aa952b3cf8ab7609fe7d7ade2d14c48b43cf45
+          name: container-image
